<resources>
    <string name="app_name">Zoo</string>
<<<<<<< HEAD
=======
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internet_not_connected">您尚未連接 Internet</string>
    <string name="you_know_nothing">You know nothing</string>
    <!--    <string name="href">在網頁開啟</string>-->
    <!--    <string name="href"><a href='https://www.google.com.tw/'>google</a></string>-->
    <string name="home_toolbar">臺北市立動物園</string>
    <string name="animal_info">動物資料</string>
    <string name="alsoKnown_field">別名</string>
    <string name="distribution_field">簡介</string>
    <string name="feature_field">辨認方式</string>
    <string name="behavior_field">行為</string>
    <string name="update_field">最後更新：</string>


>>>>>>> develop
</resources>